# negentropy

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  content.md  dialog.md  plan.md
fixtures/messy/controllers/: UserController.ts
fixtures/messy/models/: UserModel.ts
fixtures/messy/services/: AuthService.ts  OrderService.ts  UserService.ts
fixtures/messy/utils/: database.ts
src/: cli.rs  config.rs  context.rs  discovery.rs  lib.rs  main.rs  model.rs  resolver.rs
src/facts/: functions.rs  imports.rs  literals.rs  mod.rs  names.rs  state.rs
src/graph/: mod.rs
src/lang/: mod.rs  typescript.rs
src/metric/: ead.rs  edr.rs  iie.rs  mod.rs  plme.rs  sse.rs  tce.rs  tcr.rs
src/metrics/: bfp.rs  dis.rs  dmr.rs  ead.rs  edr.rs  iie.rs  ldp.rs  mod.rs  plme.rs  state.rs  tce.rs  tcr.rs  vnd.rs
src/parser/: mod.rs
src/report/: delta.rs  json.rs  metrics.rs  mod.rs  terminal.rs
tests/: dimension_fixtures.rs  integration_cli.rs
tests/fixtures/: README.md
tests/fixtures/01_mts_default/: sample.mts
tests/fixtures/02_extension_filter/: a.ts  b.mts  c.js
tests/fixtures/03_cycle_tce/: a.ts  b.ts  c.ts
tests/fixtures/04_plme_deep_path/src/: index.ts
tests/fixtures/05_edr_hardcoded/: repository.ts  service.ts
tests/fixtures/06_ead_feature_envy/: models.ts  service.ts
tests/fixtures/07_sse_oa/: state.ts
tests/fixtures/dimensions/: README.md
tests/fixtures/dimensions/architecture_decoupling/bad/: c.ts  d.ts
tests/fixtures/dimensions/architecture_decoupling/good/: n1.ts  n10.ts  n2.ts  n3.ts  n4.ts  n5.ts  n6.ts  n7.ts  n8.ts  n9.ts
(+37 files in other folders)
