[package]
name = "negentropy-cli"
version = "0.1.1"
edition = "2024"
description = "Deterministic architecture quality scanner for TS/JS repositories"
license = "MIT OR Apache-2.0"
repository = "https://github.com/negentropy-labs/negentropy"
readme = "README.md"
keywords = ["cli", "architecture", "typescript", "javascript", "analysis"]

[[bin]]
name = "negentropy"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
petgraph = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.9"
tree-sitter = "0.26.6"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.15"
